<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_selected_category_default"
        android:entries="@array/settings_category_labels"
        android:entryValues="@array/settings_category_values"
        android:key="@string/settings_selected_category_key"
        android:title="@string/settings_selected_category_label" />

    <ListPreference
        android:defaultValue="@string/settings_orderby_default"
        android:entries="@array/settings_orderby_labels"
        android:entryValues="@array/settings_orderby_values"
        android:key="@string/settings_orderby_key"
        android:title="@string/settings_orderby_label" />

</PreferenceScreen>